updates from hugo build

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ Some additions and updates that you can help with:  Add a storage system and ser
                                     Published at August 31, 2018 &middot;
                                     <i class="far fa-clock"></i>&nbsp;2 min read
                                 </p>
-                                <p>I'm a bargain hunter. Lately I have been playing with some low powered windows cloudbooks. I picked it up &ldquo;refurbished&rdquo;, the box and packaging looked new, for less than $200. It has a full HD 14&rdquo; screen which I was searching for as the similar size 720p model I had before was a little on the pixeley side for text. Also, it was repurposed as a computer for a student. As usual I made a backup image of the internal storage for when it gets passed on to the next person that wants windows....</p>
+                                <p>I'm a bargain hunter. Lately I have been playing with some low powered windows cloudbooks. I picked one up &ldquo;refurbished&rdquo;, the box and packaging looked new, for less than $200. It has a full HD 14&rdquo; screen which I was searching for as the similar size 720p model I had before was a little on the pixeley side for text. Also, it was repurposed as a computer for a student. As usual, I made a backup image of the internal storage in case the next next person wants windows....</p>
                             </div>
                         </div>
                     </article>
